ollamaService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: NodePort
  selector:
    app: ollama
  ports:
  - port: 80
    name: http
    targetPort: 11434
    protocol: TCP
    nodePort: 30007
